# eniric

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .shippable.yml  .test_config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yaml  appveyor.yml  azure-pipelines.yml  conda_requirements.txt  config.yaml  conftest.py  monkeytype.sqlite3  monkeytype.sqlite3.REMOVED.git-id  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
data/: old_fluxnorm_precision_results_2017.txt  precision_data_paper2015.txt
docs/: .rstcheck.cfg  Compare_precisions.ipynb  Compare_precisions.ipynb.REMOVED.git-id  Extract-paper-precisions.ipynb  Figueira_etal_2016.pdf.REMOVED.git-id
eniric/: IOmodule.py  Qcalculator.py  __init__.py  _config.py  atmosphere.py  broaden.py  config.yaml  corrections.py  io_module.py  legacy.py  nIRanalysis.py  outdated_rvprecision.py  plotting_functions.py  precision.py  precisioncalc.py  resample.py  resample.py.orig  snr_normalization.py  unused_utils.py  utilities.py
eniric_scripts/: TAPASproc.py  __init__.py  aces_precision.py  any_spectral_quality.py  bary_shift_atmmodel.py  csv2tsv.py  doppler_shift_atmosphere.py  download_eniric_data.sh  make_test_data.py  mk_travis_data.py  nIR_normalize_test_.py  nIR_precision.py  nIR_run.py  nIR_testing.py  perge_results.sh  phoenix_precision.py  plot_band_midpoints.py  pre-precision_check.py  prec_1.py  prepare_data.py  (+7 more)
(+454 files in other folders)
